update translations, wrap waitlist inputs on mobile

--- a/apps/web-landing/app/locales/en.json
+++ b/apps/web-landing/app/locales/en.json
@@ -89,7 +89,7 @@
         "website": "Website or any social media account",
         "websitePlaceholder": "e.g. www.yogastudio.gr"
       },
-      "submit": "Submit partnership application",
+      "submit": "Submit application",
       "submitting": "Submitting application...",
       "success": "Perfect! Your application has been submitted. We'll contact you soon! 🚀",
       "error": "Something went wrong. Please try again."
