Improve navbar UI

--- a/apps/web-landing/app/locales/gr.json
+++ b/apps/web-landing/app/locales/gr.json
@@ -89,7 +89,7 @@
         "website": "Website or any social media account",
         "websitePlaceholder": "π.χ. www.yogastudio.gr"
       },
-      "submit": "Υποβολή αίτησης συνεργασίας",
+      "submit": "Υποβολή αίτησης",
       "submitting": "Υποβολή αίτησης...",
       "success": "Τέλεια! Η αίτησή σας έχει υποβληθεί. Θα επικοινωνήσουμε μαζί σας σύντομα! 🚀",
       "error": "Κάτι πήγε στραβά. Παρακαλώ δοκιμάστε ξανά."
