Simplify reconciliation service

--- a/apps/web-landing/app/locales/gr.json
+++ b/apps/web-landing/app/locales/gr.json
@@ -107,7 +107,7 @@
       "paragraph1": "Ξεκινήσαμε ως δύο software engineers που προσπαθούσαμε να βρούμε χρόνο για γυμναστική, yoga, padel ή κάτι άλλο μεταξύ sprints και deadlines. Spoiler alert: δεν πήγαινε καλά!",
       "paragraph2": "Ένα Σάββατο πρωί, μετά από άλλη μια αποτυχημένη προσπάθεια να κάνουμε κράτηση σε 3 διαφορετικά padel courts (γιατί όλα είχαν διαφορετικά apps, διαφορετικούς τρόπους πληρωμής, χάος γενικότερα), είπαμε:",
       "quote": "Τι θα γινόταν αν υπήρχε ένα app που να κάνει το wellness εύκολο για όλους;",
-      "paragraph3": "Fast forward δύο χρόνια, αμέτρητες κούπες καφέ, και πολλά χενύχτια... εδώ είμαστε! Το KymaClub γεννήθηκε από την ανάγκη μας να κάνουμε το wellness μέρος της καθημερινότητάς μας."
+      "paragraph3": "Fast forward δύο χρόνια, αμέτρητες κούπες καφέ, και πολλά ξενύχτια... εδώ είμαστε! Το KymaClub γεννήθηκε από την ανάγκη μας να κάνουμε το wellness μέρος της καθημερινότητάς μας."
     },
     "team": {
       "title": "The Dream Team",
