Improve class card UI

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -41,6 +41,10 @@
         "duration": "{{minutes}} λεπτά",
         "spotsLeft": "{{count}} θέσεις διαθέσιμες",
         "soldOut": "Εξαντλήθηκε",
+        "bookingsDisabled": "Κρατήσεις Απενεργοποιημένες",
+        "registrationsClosed": "Οι Εγγραφές Έκλεισαν",
+        "bookingsNotYetOpen": "Οι Κρατήσεις Δεν Έχουν Ανοίξει Ακόμα",
+        "bookingsClosed": "Οι Κρατήσεις Έκλεισαν",
         "noBusinesses": "Δεν βρέθηκαν επιχειρήσεις κοντά",
         "noClasses": "Δεν βρέθηκαν μαθήματα",
         "searchPlaceholder": "Αναζήτηση επιχειρήσεων ή μαθημάτων...",
