--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -41,6 +41,10 @@
         "duration": "{{minutes}} min",
         "spotsLeft": "{{count}} spots left",
         "soldOut": "Sold Out",
+        "bookingsDisabled": "Bookings Disabled",
+        "registrationsClosed": "Registrations Closed",
+        "bookingsNotYetOpen": "Bookings Not Yet Open",
+        "bookingsClosed": "Bookings Closed",
         "noBusinesses": "No businesses found nearby",
         "noClasses": "No classes found",
         "searchPlaceholder": "Search businesses or classes...",
