--- a/apps/mobile-consumer/src/locales/lt/translation.json
+++ b/apps/mobile-consumer/src/locales/lt/translation.json
@@ -41,6 +41,10 @@
         "duration": "{{minutes}} min",
         "spotsLeft": "{{count}} vietų liko",
         "soldOut": "Išparduota",
+        "bookingsDisabled": "Rezervacijos išjungtos",
+        "registrationsClosed": "Registracijos uždarytos",
+        "bookingsNotYetOpen": "Rezervacijos dar neatidarytos",
+        "bookingsClosed": "Rezervacijos uždarytos",
         "noBusinesses": "Šalia nerastas verslas",
         "noClasses": "Nerastos pamokos",
         "searchPlaceholder": "Ieškoti verslo ar pamokų...",
